--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">1.1.9 Project: Falling Candy</h1>
     <br>
-    <img src="Images/fallingcandy.PNG">
+    <img src="fallingcandy.PNG">
     <br>
     <h1 style="color:rgb(255, 254, 254)"> This is a halloween themed game that we designed. It allows the user to use left and right arrow key to move the pumpkin around to catch the candy. We used methods from 1.1.8 to make the candy fall down. And we designed the background with turtle and painter. We inserted image for the pumpkin and the candy. </h1>
     <br>
