--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,12 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)"> This is a halloween themed game that we designed. It allows the user to use left and right arrow key to move the pumpkin around to catch the candy. We used methods from 1.1.8 to make the candy fall down. And we designed the background with turtle and painter. We inserted image for the pumpkin and the candy. </h1>
     <br>
+    <h1 style="color:rgb(255, 254, 254)">	1.2.5 Project: Tic Tac Toe </h1>  
+    <br>
+    <img src="Tic Tac Minion.PNG">
+    <br>
+    <h1 style="color:rgb(255, 254, 254)">   This is our project for 1.2.5. It's Tic Tac Toe and we switch the X and O into purple and yellow minion. We collect the input of the user and send the minions to the boxes. We also set up a function to check the winner. At the end, we show the score. </h1>
+    <br>
     <h1 style="color:rgb(255, 254, 254)">   Second day scratch project.</h1>
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
