--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,12 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">   This is our project for 1.2.5. It's Tic Tac Toe and we switch the X and O into purple and yellow minion. We collect the input of the user and send the minions to the boxes. We also set up a function to check the winner. At the end, we show the score. </h1>
     <br>
+    <h1 style="color:rgb(255, 254, 254)">  1.3.1 Project: Christmas Card </h1>
+    <br>
+    <img src="">
+    <br>
+    <h1 style="color:rgb(255, 254, 254)"> This is our project for 1.3.1. We decided to do a Christmas card for kids in the children's hospital. We designed a envelope and when you clicked it, it will appear a moving santa and a reindeer. There's a mini game, where you just click the santa. And when you click the reindeer, there will be a message appearing. </h1>
+    <br>
     <h1 style="color:rgb(255, 254, 254)">   Second day scratch project.</h1>
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
