--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,8 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">  1.3.1 Project: Christmas Card </h1>
     <br>
-    <img src="">
+    <img src="red_envelope.PNG">
+    <img src="letter.PNG">
     <br>
     <h1 style="color:rgb(255, 254, 254)"> This is our project for 1.3.1. We decided to do a Christmas card for kids in the children's hospital. We designed a envelope and when you clicked it, it will appear a moving santa and a reindeer. There's a mini game, where you just click the santa. And when you click the reindeer, there will be a message appearing. </h1>
     <br>
