--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,12 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)"> This is our project for 1.3.1. We decided to do a Christmas card for kids in the children's hospital. We designed a envelope and when you clicked it, it will appear a moving santa and a reindeer. There's a mini game, where you just click the santa. And when you click the reindeer, there will be a message appearing. </h1>
     <br>
-    <h1 style="color:rgb(255, 254, 254)">   Second day scratch project.</h1>
+    <h1 style="color:rgb(255, 254, 254)">   Scratch project: Soccer Game </h1>
+    <br>
+    <img src="soccer.PNG">
+    <img src="penalty.PNG">
+    <br>
+    <h1 style="color:rgb(255, 254, 254)">  This is the 
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
