--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     <img src="soccer.PNG">
     <img src="penalty.PNG">
     <br>
-    <h1 style="color:rgb(255, 254, 254)">  This is the 
+    <h1 style="color:rgb(255, 254, 254)">  This is the project we did in scratch. It's a soccer game including a normal match and a penalty game. It is a multiplayer games. It allowed the user to use arrow keys and WASD to controller the character in the first stage of the game. After the match, it will go into penalty stage where the one user click where to shoot and the other will try to save it. </h1>
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
