--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,10 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">  This is the project we did in scratch. It's a soccer game including a normal match and a penalty game. It is a multiplayer games. It allowed the users to use arrow keys and WASD to control the character in the first stage of the game. After the match, it will go into penalty stage where the one user click where to shoot and the other will try to save it. </h1>
     <br>
+    <h1 style="color:rgb(255, 254, 254)">   3.1.6 Rover Phone Home </h1>
+    <br>
+    <img src="">	 
+    <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Interactive Fiction Rags to Riches.</h1>
