--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,8 @@
     <br>
     <img src="">	 
     <br>
+    <h1 style="color:rgb(255, 254, 254)">  At first, we used the information given to sketch multiple graphs to help us to match the data. Eventually we found out that the rover is located in desert plains based on the sound and wind info given. </h1>
+    <br>
     <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
     <h1 style="color:rgb(255, 254, 254)">   Interactive Fiction Rags to Riches.</h1>
