--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,8 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">   3.1.6 Rover Phone Home </h1>
     <br>
-    <img src="">	 
+    <img src="sound.PNG">	
+    <img src="Gyroscope.PNG">	 
     <br>
     <h1 style="color:rgb(255, 254, 254)">  At first, we used the information given to sketch multiple graphs to help us to match the data. Eventually we found out that the rover is located in desert plains based on the sound and wind info given. </h1>
     <br>
