--- a/portfolio.html
+++ b/portfolio.html
@@ -55,18 +55,11 @@
     <br>
     <h1 style="color:rgb(255, 254, 254)">  At first, we used the information given to sketch multiple graphs to help us to match the data. Eventually we found out that the rover is located in desert plains based on the sound and wind info given. </h1>
     <br>
-    <h1 style="color:rgb(255, 254, 254)">   Using App Inventor to make app game Duck Hunter.</h1>
+    <h1 style="color:rgb(255, 254, 254)">   4.1.4 Netlogo Simulation Project </h1>
     <br>
-    <h1 style="color:rgb(255, 254, 254)">   Interactive Fiction Rags to Riches.</h1>
+    <img src="waterfall.PNG">
     <br>
-    <h1 style="color:rgb(255, 254, 254)">   Black Jack game written in Python.</h1>
-    <br>
-    <h1 style="color:rgb(255, 254, 254)">   Modified bits in pictures.</h1>
-    <br>
-    <h1 style="color:rgb(255, 254, 254)">   Use data files to create graphs.</h1>
-    <br>
-    <h1 style="color:rgb(255, 254, 254)">   Using netlogo do remix of illusions.</h1>
-    <h1 style="color:rgb(255, 254, 254)">   Interactive Fiction Rags to Riches.</h1>
+    <h1 style="color:rgb(255, 254, 254)"> Our final project is analyzing data. We choose to analyze the particle system waterfall and how it function. On our presentation, we explained how the flow of water particle depend on the environment such as gravity, wind or viscocity. 
     <br>
 	  </body>
   </center>  
