--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <br>
     <img src="waterfall.PNG">
     <br>
-    <h1 style="color:rgb(255, 254, 254)"> Our final project is analyzing data. We choose to analyze the particle system waterfall and how it function. On our presentation, we explained how the flow of water particle depend on the environment such as gravity, wind or viscocity. 
+    <h1 style="color:rgb(255, 254, 254)"> Our final project is analyzing data. We chose to analyze the particle system waterfall and how it function. On our presentation, we explained how the flow of water particle depend on the environment such as gravity, wind or viscocity. 
     <br>
 	  </body>
   </center>  
